[package]
name = "nanorpc-http"
version = "0.1.2"
edition = "2021"
license="ISC"
description="an extremely simple nanorpc backend built on top of HTTP"
repository="https://github.com/nullchinchilla/nanorpc-http"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-compat = "0.2.1"
async-trait = "0.1.64"
bytes = "1.4.0"
concurrent-queue = "2.1.0"
http-body-util = "=0.1.0-rc.2"
hyper = {version="=1.0.0-rc.2", features=["client", "server", "http1"]}
nanorpc = "0.1.12"
serde_json = "1.0.93"
smol = "1.3.0"


[dev-dependencies]
thiserror = "1.0.38"
