[package]
name = "nanorpc-http"
version = "0.1.3"
edition = "2021"
license = "ISC"
description = "an extremely simple nanorpc backend built on top of HTTP"
repository = "https://github.com/nullchinchilla/nanorpc-http"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
async-trait = "0.1.80"
bytes = "1.6.0"
concurrent-queue = "2.5.0"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
nanorpc = "0.1.12"
serde_json = "1.0.117"
smol = "2.0.0"
tokio = { version = "1.37.0", features = ["net"] }


[dev-dependencies]
thiserror = "1.0.60"
